--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -283,8 +283,12 @@ msgctxt "#32106"
 msgid "Use XBMC pre-caching [I](caches images to thumbnails folder while downloading) [/I]"
 msgstr ""
 
-#empty strings from id 32107 to 32119
-#Add-on messages: Image types id=32120 to 32140
+#empty strings from id 32107 to 32118
+#Add-on messages: Image types id=32119 to 32140
+
+msgctxt "#32119"
+msgid "KeyArt"
+msgstr ""
 
 msgctxt "#32120"
 msgid "Season Fanarts"
@@ -327,7 +331,7 @@ msgid "Season Posters"
 msgstr ""
 
 msgctxt "#32130"
-msgid "Thumb 16:9"
+msgid "Landscape"
 msgstr ""
 
 msgctxt "#32131"
